--- a/scripts/Leaderboard/Leaderboard.csproj
+++ b/scripts/Leaderboard/Leaderboard.csproj
@@ -13,4 +13,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="7.3.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.3.0" />
+      <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.3.0" />
+    </ItemGroup>
+
 </Project>
