--- a/scripts/Leaderboard/appsettings.json
+++ b/scripts/Leaderboard/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NpgConnection": "Host=localhost;Port=5432;Database=Leaderboard;Username=postgres;Password=Test123%"
+  }
 }
