--- a/scripts/Leaderboard/appsettings.json
+++ b/scripts/Leaderboard/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NpgConnection": "Host=localhost;Port=5432;Database=Leaderboard;Username=postgres;Password=Test123%"
+    "NpgConnection": "Host=localhost;Port=5432;Database=Leaderboard;Username=postgres;Password=151233"
   }
 }
